# Crispradium

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  guide_rna_analyzer.py  routes.py  sequence_handler.py
app/static/js/: app.js
app/templates/: index.html
